--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-SECRET_KEY=TU_CLAVE_SECRETA_SUPER_SEGURA_AQUI
+FLASK_APP=app.py
+FLASK_ENV=development
+SECRET_KEY=tu_clave_secreta
+SQLALCHEMY_DATABASE_URI=sqlite:///database.db
